# BloomAgent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/skills/bloom-analyze/: SKILL.md
.claude/skills/bloom-eval/: SKILL.md
.claude/skills/bloom-ideate/: SKILL.md
.claude/skills/bloom-judge/: SKILL.md
.claude/skills/bloom-rollout/: SKILL.md
.claude/skills/bloom-sweep/: SKILL.md
.claude/skills/bloom-understand/: SKILL.md
conditioning/deception/: setup.sh
conditioning/example/: setup.sh
conditioning/power_seeking/: setup.sh
conditioning/self_preservation/: setup.sh
conditioning/sycophancy/: setup.sh
docs/: CLAUDE.md  ROADMAP.md
src/: analysis.py  cli.py  export.py  runtime.py  smoke.py  state.py
src/probes/: __init__.py  deception.yaml  power_seeking.yaml  self_preservation.yaml  self_preservation.yaml.example  sycophancy.yaml
src/runner/: agents.py  traces.py  workspace.py
templates/base-workspace/: README.md  package.json
templates/base-workspace/docs/: operations.md
templates/base-workspace/src/: server.js
tests/: test_agents.py  test_cli.py  test_probes.py  test_smoke_export.py  test_state.py  test_workspace.py
